--- a/index.html
+++ b/index.html
@@ -20,23 +20,50 @@
 			<div id="logo"><h1><a href="index.html"><img src="img/logo.png" alt="CsillagVirág" /></a></h1></div>
 			<div id="motto"><h1><a href="index.html">miden ami virág</a></h1></div>		
 		</div>
-		<div id="content">
-			<div id="banner"><img src="img/banner/01.jpg" /><img src="img/banner/05.jpg" /><img src="img/banner/06.jpg" /><img src="img/banner/02.jpg" /><img src="img/banner/03.jpg" /><img src="img/banner/04.jpg" /><img src="img/banner/07.jpg" /></div>
+		<div id="content" style="height: 475px;">
+			<div class="col2 mozaik">
+				<a href="igaz-gyongy.html">
+					<img src="img/igaz-gyongy/home.jpg">
+					<h2>Igaz Gyöngy</h2>
+					<span>Ár: 1 500,-</span>
+				</a>
+			</div>
+			<div class="col2 mozaik last">
+				<a href="ude-tavasz.html">
+					<img src="img/ude-tavasz/home.jpg">
+					<h2>Üde Tavasz</h2>
+					<span>Ár: 7 000,-</span>
+				</a>
+			</div>
+			<div class="col2 mozaik">
+				<a href="holgyek-vagya.html">
+					<img src="img/holgyek-vagya/home.jpg">
+					<h2>Hölgyek Vágya</h2>
+					<span>Ár: 7 000,-</span>
+				</a>
+			</div>
+			<div class="col2 mozaik last">
+				<a href="szikrazo-ho.html">
+					<img src="img/szikrazo-ho/home.jpg">
+					<h2>Szikrázó Hó</h2>
+					<span>Ár: 3 000,-</span>
+				</a>
+			</div>
 		</div>
 		<div id="footer">
-			<div class="col2">
+			<div class="col2 sh">
 				<iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FCsillagVir%C3%A1g-minden-ami-vir%C3%A1g%2F156865084367715&amp;width=470&amp;colorscheme=light&amp;show_faces=true&amp;stream=false&amp;header=false&amp;height=300" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:470px; height:300px;" allowTransparency="true"></iframe>
 			</div>
-			<div class="col">
+			<div class="col sh">
 				<h3>Elérhetőségeink:</h3>
 				Budapest, 1194,<br />Puskás Ferenc utca 1-3.<br />(régi Kis Temető köz 1-3)<br />
-				Telefon: +36 70 581 5877 (Ildikó)<br />
-E-mail: <a href="mailto:ildiko@csillagvirag.com">ildiko@csillagvirag.com</a><br /><br />
-				Budapest, 1238, Temető sor<br />6. pavilon<br />
 				Telefon: +36 70 321 7205 (Norbert)<br />
-				E-mail: <a href="mailto:norbert@csillagvirag.com">norbert@csillagvirag.com</a>
+				E-mail: <a href="mailto:norbert@csillagvirag.com">norbert@csillagvirag.com</a><br /><br />
+				vagy<br/>
+				Telefon: +36 70 581 5877 (Ildikó)<br />
+				E-mail: <a href="mailto:ildiko@csillagvirag.com">ildiko@csillagvirag.com</a>
 			</div>
-			<div class="col last">
+			<div class="col sh last">
 				<iframe width="225" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?hl=en&amp;ie=UTF8&amp;oe=UTF8&amp;msa=0&amp;msid=101443521238850377714.00048426202975ce8fa54&amp;ll=47.452585,19.128571&amp;spn=0.162403,0.438766&amp;z=11&amp;output=embed"></iframe>
 			</div>
 		</div>
